--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,7 @@
     "website_label_placeholder": "Website Label",
     "website_url_placeholder": "Website URL"
   },
+  "export_document": "Export Document",
   "not_found": {
     "go_home": "Go to home screen!",
     "message": "The page you are looking for does not exist.",
