--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,8 @@
     "message": "The page you are looking for does not exist.",
     "oops": "Oops!"
   },
+  "reset_document": "Reset Document",
+  "reset_document_confirmation": "Are you sure you want to reset your CV? This will erase ALL DATA!!",
   "social_media": {
     "facebook": "Facebook",
     "instagram": "Instagram",
