add untested position form

--- a/locales/en.json
+++ b/locales/en.json
@@ -33,6 +33,26 @@
     "message": "The page you are looking for does not exist.",
     "oops": "Oops!"
   },
+  "position": {
+    "company_placeholder": "Company",
+    "description_placeholder": "Job Description",
+    "employment_type_apprenticeship": "Apprenticeship",
+    "employment_type_contractor": "Contractor",
+    "employment_type_freelance": "Freelance",
+    "employment_type_full_time": "Full-Time",
+    "employment_type_internship": "Internship",
+    "employment_type_part_time": "Part-Time",
+    "employment_type_placeholder": "Employment Type",
+    "employment_type_seasonal": "Seasonal",
+    "employment_type_self_employed": "Self-Employed",
+    "job_title_placeholder": "Job Title",
+    "location_placeholder": "Location",
+    "location_type_hybrid": "Hybrid",
+    "location_type_on_site": "On-Site",
+    "location_type_placeholder": "Location Type",
+    "location_type_remote": "Remote",
+    "skills_placeholder": "Skills"
+  },
   "reset_document": "Reset Document",
   "reset_document_confirmation": "Are you sure you want to reset your CV? This will erase ALL DATA!!",
   "reset_document_confirmation_title": "Reset CV",
