add shaky education form

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,5 +85,8 @@
     "home": "Home",
     "projects": "Projects",
     "skills": "Skills"
+  },
+  "university": {
+    "search": "Search for university..."
   }
 }
