start making list items

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,6 +6,7 @@
     "add": "Add",
     "cancel": "Cancel",
     "ok": "Ok",
+    "remove": "Remove",
     "reset": "Reset"
   },
   "contact_info": {
